# flext-target-oracle

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALISE_PROBLEMA_GRAVACAO.md  AUDITORIA_REAL.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_LOGGING_GUIDE.md  ERROR_MASKING_ELIMINATION_REPORT.md  FLEXT_CORE_MIGRATION_APPLIED.md  LOGGING_MIGRATION.md  MODERN_ARCHITECTURE_DESIGN.md  Makefile  Makefile.build  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SILENT_ERRORS_ELIMINATION_REPORT.md  STATUS_FINAL.md  TESTING.md  TODO.md  architecture.md  base.mk  benchmark_performance.py  check_quality.py  check_url_fields.py  complexity_analysis.txt  config.json.example  config_examples.py  conftest.py  custom.mk  custom.mk.rej  development.md  example_usage.py  fix_final.py  fix_integration_tests.py  fix_pep_strict.py  fix_remaining_issues.py  (+37 more)
.github/workflows/: ci.yml
.qlty/: qlty.toml
.scope/: config.toml  graph.db-shm  graph.db-wal
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md
config/: target_oracle.yaml
data/: full_singer_stream.jsonl  large_dataset.jsonl  sample_records.jsonl  sample_schema.json  sample_state.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  TODO.md  USAGE_GUIDE.md  architecture.md  development.md  index.md  python-module-organization.md  singer-integration.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  python-module-organization.md  security.md  singer-integration.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
examples/: 01_basic_usage.py  02_usage.py  03_production_setup.py  README.md  __init__.py  basic_usage.py  example_usage.py  production_setup.py  run_example.sh
examples/meltano_integration/: .env.example  meltano.yml
flext_target_oracle/: __init__.py  cli.py  config_validator.py  connectors.py  logging_config.py  monitoring.py  setup.py  sinks.py  target.py
flext_target_oracle/core/: exceptions.py
flext_target_oracle/core/interfaces/: __init__.py  batch_processor.py  connection.py  monitor.py  type_mapper.py  validator.py
flext_target_oracle/core/models/: __init__.py  batch.py  config.py  connection.py  metrics.py  schema.py
flext_target_oracle/infrastructure/oracle/: __init__.py  connection.py  optimizer.py  type_mapper.py
guides/: README.md  configuration.md  development.md  getting-started.md  python-module-organization.md  singer-integration.md  skill-automation-pattern.md  testing.md  troubleshooting.md
output/: processing_results.json
scripts/: run_tests.sh
src/flext_target_oracle/: __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy.py  _exports_lazy_part_01.py  _settings.py  api.py  cli.py  config.py  connector.py  connectors.py  constants.py  exceptions.py  history  history.json  loader.py  loader_original_backup.py  logging.py  models.py  monitoring.py  observability.py  plugin_implementation.py  protocols.py  settings.py  simple_api.py  sink.py  sinks.py  target.py  target_client.py  target_client_old.py  target_commands.py  target_config.py  target_exceptions.py  target_loader.py  target_models.py  target_observability.py  target_old.py  (+6 more)
src/flext_target_oracle/_constants/: __init__.py  base.py
src/flext_target_oracle/_models/: __init__.py  commands.py  config.py  results.py  settings.py  singer.py
src/flext_target_oracle/_protocols/: __init__.py  base.py
src/flext_target_oracle/_typings/: __init__.py  base.py
src/flext_target_oracle/_utilities/: __init__.py  base.py  cli.py  client.py  errors.py  loader.py  observability.py  service.py  services.py
src/flext_target_oracle/application/: __init__.py  services.py
src/flext_target_oracle/config/: target-oracle.yaml
src/flext_target_oracle/domain/: __init__.py  models.py
src/flext_target_oracle/infrastructure/: di_container.py
src/flext_target_oracle/observability/: __init__.py  metrics.py
src/flext_target_oracle/services/: __init__.py
tests/: README.md  __init__.py  base.py  conftest.py  conftest.py.disabled  conftest_clean.py  conftest_project.py  constants.py  helpers.py  models.py  protocols.py  settings.py  test_basic_connection.py  test_basic_functionality.py  test_bulk_operations.py  test_config.py  test_config_coverage.py  test_configuration.py  test_connection.py  test_e2e_basic_functionality.py  test_e2e_integration.py  test_e2e_oracle_autonomous.py  test_enterprise_features.py  test_env_validation.py  test_error_handling.py  test_exceptions.py  test_exceptions_isolated.py  test_integration.py  test_loader.py  test_loader_coverage.py  test_logging_monitoring.py  test_message_processing.py  test_oracle_connection.py  test_oracle_direct_connection.py  test_oracle_features.py  test_performance_benchmarks.py  test_real_world_scenarios.py  test_singer_integration.py  test_sqlalchemy2_features.py  test_sqlalchemy_connection.py  (+7 more)
tests/artifacts/: config.json
tests/artifacts/oracle-init/: 01-create-test-schema.sql
tests/e2e/: __init__.py  test_full_singer_pipeline.py  test_singer.py  test_singer_workflow.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_oracle.py  test_oracle_integration.py  test_oracle_performance.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_cli_dispatcher.py  test_config.py  test_config_coverage.py  test_exceptions.py  test_loader.py  test_loader_coverage.py  test_module_governance.py  test_observability_metrics.py  test_real_config.py  test_real_exceptions.py  test_real_loader.py  test_real_target.py  test_sink_comprehensive.py  test_target.py  test_target_coverage.py
