[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flext-target-oracle"
version = "1.0.0"
description = "Advanced Singer Target for Oracle Database with SQLAlchemy 2.0+ and oracledb - FLEXT ETL Framework"
authors = ["FLEXT Team <info@flext.sh>"]
readme = "README.md"
homepage = "https://github.com/flext/flext-target-oracle"
repository = "https://github.com/flext/flext-target-oracle"
documentation = "https://flext-target-oracle.readthedocs.io"
keywords = ["singer", "oracle", "etl", "database", "target"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "flext_target_oracle"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Core dependencies - maximizing latest features
singer-sdk = ">=0.47.4"
oracledb = ">=2.5.0"
sqlalchemy = ">=2.0.0"
# Optional monitoring
structlog = {version = ">=24.4.0", optional = true}
prometheus-client = {version = ">=0.21.0", optional = true}

[tool.poetry.extras]
monitoring = ["structlog", "prometheus-client"]
all = ["structlog", "prometheus-client"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
# Code quality
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
# Documentation
sphinx = "^8.1.0"
sphinx-rtd-theme = "^3.0.0"
myst-parser = "^4.0.0"

[tool.poetry.scripts]
flext-target-oracle = "flext_target_oracle.cli:main"

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "oracledb.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=flext_target_oracle --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["flext_target_oracle"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
[tool.bandit]
skips = ["B404", "B603", "B607", "B105", "B608"]
