[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2.0", "poetry-core>=2" ]

[project]
name = "flext-target-oracle"
version = "0.11.0"
description = "FLEXT Target Oracle - Singer Target for Oracle Database Data Loading"
readme = "README.md"
keywords = [
  "data-loading",
  "database",
  "enterprise",
  "etl",
  "flext",
  "library",
  "oracle",
  "typed",
]
license = "MIT"
maintainers = [ {email = "team@flext.sh", name = "FLEXT Team"} ]
authors = [ {email = "team@flext.sh", name = "FLEXT Team"} ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Database",
  "Topic :: System :: Archiving",
]
dependencies = [
  "click>=8",
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "pyyaml>=6.0.2",
  "rich>=14.2,<15",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-target-oracle = "flext_target_oracle.target:cli"
scripts.target-oracle = "flext_target_oracle.target:cli"

[tool.poetry]
dependencies.click = ">=8.0.0"
dependencies.pydantic = ">=2.12.3"
dependencies.python = ">=3.13,<3.14"
dependencies.rich = "=14.2.0"
dependencies.flext-cli.develop = true
dependencies.flext-cli.path = ".flext-deps/flext-cli"
dependencies.flext-core.develop = true
dependencies.flext-core.path = ".flext-deps/flext-core"
dependencies.flext-db-oracle.develop = true
dependencies.flext-db-oracle.path = ".flext-deps/flext-db-oracle"
dependencies.flext-meltano.develop = true
dependencies.flext-meltano.path = ".flext-deps/flext-meltano"
dependencies.flext-observability.develop = true
dependencies.flext-observability.path = ".flext-deps/flext-observability"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.pip-audit = ">=2.9.0"
group.dev.dependencies.pre-commit = ">=4.2.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.pytest-benchmark = ">=5.1.0"
group.dev.dependencies.pytest-clarity = ">=1.0.1"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest-mock = ">=3.14.1"
group.dev.dependencies.pytest-sugar = ">=1.0.0"
group.dev.dependencies.pytest-timeout = ">=2.4.0"
group.dev.dependencies.pytest-xdist = ">=3.8.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.14"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.dev.dependencies.bandit.extras = [
  "toml",
]
group.dev.dependencies.bandit.version = ">=1.8.0"
packages = [ {from = "src", include = "flext_target_oracle"} ]

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.deptry]
known_first_party = [
  "flext_target_oracle",
  "flext_core",
  "flext_db_oracle",
  "flext_meltano",
  "flext_observability",
  "flext_cli",
]
package_module_name_map.PyYAML = "yaml"
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "security",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "bandit",
  "commitizen",
  "detect-secrets",
  "pip-audit",
  "pre-commit",
  "pyrefly",
  "radon",
  "ruff",
  "vulture",
  # Pytest plugins (loaded by pytest, not imported)
  "pytest-benchmark",
  "pytest-clarity",
  "pytest-mock",
  "pytest-sugar",
  "pytest-timeout",
  "pytest-xdist",
  # Runtime deps used indirectly (via click, rich, flext)
  "click",
  "rich",
  "pytest",
  "pytest-cov",
  # Transitive deps (used via flext-core)
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "pydantic-core",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.markers = [
  "e2e: End-to-end tests",
  "integration: Integration tests",
  "slow: Slow tests",
  "smoke: Smoke tests",
  "unit: Unit tests",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
report.fail_under = 100
report.precision = 2
run.source = [ "src/flext_target_oracle" ]

[tool.pyrefly]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]
search-path = [ "../typings", "../typings/generated", "src", "tests", "examples", "scripts" ]

[tool.bandit]
exclude_dirs = [
  "build",
  "dist",
  "tests",
]
skips = [ "B404", "B603", "B607", "B105", "B608", "B101", "B601" ]
