[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-target-oracle"
version = "0.12.0-dev"
description = "FLEXT Target Oracle - Singer Target for Oracle Database Data Loading"
readme = "README.md"
keywords = [
  "data-loading",
  "database",
  "enterprise",
  "etl",
  "flext",
  "library",
  "oracle",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving",
  "Typing :: Typed",
]
dependencies = [
  "click>=8",
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "pyyaml>=6.0.2",
  "rich>=14.2,<15",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-target-oracle = "flext_target_oracle.target:cli"
scripts.target-oracle = "flext_target_oracle.target:cli"

[tool.poetry]
dependencies.click = ">=8.0.0"
dependencies.pydantic = ">=2.12.3"
dependencies.python = ">=3.13,<3.14"
dependencies.rich = "=14.2.0"
dependencies.flext-cli.develop = true
dependencies.flext-cli.path = "../flext-cli"
dependencies.flext-core.develop = true
dependencies.flext-core.path = "../flext-core"
dependencies.flext-db-oracle.develop = true
dependencies.flext-db-oracle.path = "../flext-db-oracle"
dependencies.flext-meltano.develop = true
dependencies.flext-meltano.path = "../flext-meltano"
dependencies.flext-observability.develop = true
dependencies.flext-observability.path = "../flext-observability"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.pip-audit = ">=2.9.0"
group.dev.dependencies.pre-commit = ">=4.2.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.pytest-benchmark = ">=5.1.0"
group.dev.dependencies.pytest-clarity = ">=1.0.1"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest-mock = ">=3.14.1"
group.dev.dependencies.pytest-sugar = ">=1.0.0"
group.dev.dependencies.pytest-timeout = ">=2.4.0"
group.dev.dependencies.pytest-xdist = ">=3.8.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.14"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.dev.dependencies.bandit.extras = [
  "toml",
]
group.dev.dependencies.bandit.version = ">=1.8.0"
packages = [ { from = "src", include = "flext_target_oracle" } ]

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = [ "flext_target_oracle" ]

[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = """\
  .git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,vendor,*.pb2*.\
  py\
  """

[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
package_module_name_map.PyYAML = "yaml"
pep621_dev_dependency_groups = [
  "dev",
  "docs",
  "security",
  "test",
  "typings",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "bandit",
  "commitizen",
  "detect-secrets",
  "pip-audit",
  "pre-commit",
  "pyrefly",
  "radon",
  "ruff",
  "vulture",
  # Pytest plugins (loaded by pytest, not imported)
  "pytest-benchmark",
  "pytest-clarity",
  "pytest-mock",
  "pytest-sugar",
  "pytest-timeout",
  "pytest-xdist",
  # Runtime deps used indirectly (via click, rich, flext)
  "click",
  "rich",
  "pytest",
  "pytest-cov",
  # Transitive deps (used via flext-core)
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "pydantic-core",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.python_classes = [
  "Test*",
]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [
  "test_*",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests/",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/__pycache__/*",
  "*/_pb2*.py",
  "*/conftest.py",
  "*/tests/*",
]
run.relative_files = true
run.source = [ "src/flext_target_oracle" ]
report.exclude_lines = [
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
  "def __repr__",
  "def __str__",
  'if __name__ == "__main__":',
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 100
report.partial_branches = [
  "pragma: no branch",
]
report.precision = 2
report.show_missing = true
report.skip_empty = true
html.directory = "htmlcov"
xml.output = "coverage.xml"

[tool.mypy]
cache_dir = ".mypy_cache"
check_untyped_defs = true
color_output = true
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
exclude = [
  ".*/generate_config.py",
  ".*/manage.py",
  ".*_pb2\\.py$",
  ".*_pb2_grpc\\.py$",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "vendor/",
]
extra_checks = true
follow_imports = "silent"
follow_imports_for_stubs = true
incremental = true
local_partial_types = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
platform = "linux"
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
mypy_path = [
  "..",
  "../typings",
  "../typings/generated",
  "src",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
]

[tool.pyrefly]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]
search-path = [
  "..",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
  "../typings",
  "../typings/generated",
  "src",
  "tests",
  "examples",
  "scripts",
]

[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = [
  "..",
  "src",
  "tests",
  "examples",
  "scripts",
  "../typings",
  "../typings/generated",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.bandit]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "vendor",
]
skips = [ "B404", "B603", "B607", "B105", "B608" ]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
